# SonyArwView

./: .gitignore  CMakeLists.txt  README.md
docs/: HOW-IT-WORKS.md  REGISTRY.md  TROUBLESHOOTING.md
samples/: README.md
scripts/: Install.ps1  Set-Viewer.ps1  Uninstall.ps1  build-package.ps1  clear-thumbnail-cache.ps1  register-msix-thumbnail.ps1  register-thumbnail.ps1  register-wic.ps1  set-default.ps1  unregister-msix-thumbnail.ps1  unregister-thumbnail.ps1  unregister-wic.ps1
src/ArwPreviewExtractor/: ArwPreviewExtractor.cpp  ArwPreviewExtractor.h  CMakeLists.txt  JpegValidation.cpp  JpegValidation.h  TiffReader.cpp  TiffReader.h
src/SonyArwOpen/: CMakeLists.txt  Config.h  Loc.h  Settings.cpp  Settings.rc  SonyArwOpen.manifest  main.cpp  resource.h
src/SonyArwPreviewExtract/: CMakeLists.txt  main.cpp
src/SonyArwThumbnailPackage/: AppxManifest.xml
src/SonyArwThumbnailProvider/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  Debug.cpp  Debug.h  DllCommon.h  Registration.cpp  Registration.h  SonyArwThumbnailProvider.def  ThumbnailProvider.cpp  ThumbnailProvider.h  dllmain.cpp  guids.cpp  guids.h
src/SonyArwWicDecoder/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  Debug.cpp  Debug.h  DllCommon.h  Registration.cpp  Registration.h  SonyArwWicDecoder.def  WicDecoder.cpp  WicDecoder.h  WicFrameDecode.cpp  WicFrameDecode.h  dllmain.cpp  guids.cpp  guids.h
src/ThumbTest/: CMakeLists.txt  main.cpp
src/WicDecodeTest/: CMakeLists.txt  main.cpp
